Fixed text getting cut off on iphone (320px).

--- a/static/css/event.styl
+++ b/static/css/event.styl
@@ -326,3 +326,12 @@ a, a:hover
     .navbar-default .navbar-collapse
         border: 0px !important
         margin-top: 20px
+
+@media only screen and (max-width : 320px)
+    #about
+        .overlay
+            h1
+                font-size: 50px
+
+            h2
+                font-size: 30px
